# tacit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  tacit_cli.py
.claude/: CLAUDE.md
.claude/rules/: code-style.md  do-not.md  testing.md  workflow.md
.claude/rules/backend/: agents.md  api.md  database.md  pipeline.md  tools.md
.claude/rules/frontend/: swiftui.md
tacit/: CLAUDE.md  COMPARISON_REPORT.md  DEMO_SCRIPT.md  README.md  __init__.py  generated-CLAUDE.md  requirements.txt
tacit/TacitApp/: Package.swift
tacit/backend/: .env.example  __init__.py  __main__.py  agents.py  config.py  database.py  db_tools.py  demo_data.py  eval_extract.py  eval_v2.py  eval_v2_results.json  main.py  models.py  pipeline.py  proposals.py  tacit_client.py  tools.py
tacit/backend/demo-db/: DEMO-SCRIPT.md  SUBMISSION.md  VIDEO-RECORDING-PLAN.md  claude-md-diff-openclaw.diff  comparison-openclaw.json  demo.db  generated-claude-md-openclaw.md  tacit-demo.pptx
tacit/backend/generated_claude_md/: COMPARISON_REPORT.md  astral-sh_ruff_CLAUDE.md  denoland_deno_CLAUDE.md  langchain-ai_langchain_CLAUDE.md  modelcontextprotocol_python-sdk_CLAUDE.md  prisma_prisma_CLAUDE.md  repo_1_CLAUDE.md  vercel_ai_CLAUDE.md
tacit/backend/hooks/: tacit-capture.sh
tacit/backend/prompts/: anti_pattern_miner.md  ci_failure_miner.md  code_analyzer.md  db_schema_analyzer.md  docs_analyzer.md  domain_analyzer.md  generator.md  local_extractor.md  modular_generator.md  outcome_analyzer.md  pr_scanner.md  pr_validator.md  synthesizer.md  (+3 more)
tacit/eval/: EVAL_REPORT.md  extraction_log.txt
(+100 files in other folders)
