[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tacit"
version = "0.1.0"
description = "Extract tacit team knowledge from GitHub PRs and CI failures → generate CLAUDE.md and .claude/rules/ files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bayram Annakov"},
]
keywords = ["claude-code", "claude-agent-sdk", "mcp", "knowledge-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
full = [
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=3.0.0",
    "websockets>=12.0",
]

[project.scripts]
tacit = "tacit_cli:main"

[project.urls]
Homepage = "https://github.com/BayramAnnakov/tacit"
Repository = "https://github.com/BayramAnnakov/tacit"

[tool.setuptools]
py-modules = ["tacit_cli"]

[tool.setuptools.packages.find]
include = ["tacit*"]
